# QTRender

./: .gitignore  CMakeLists.txt  main.cpp
RenderCore/: CMakeLists.txt
RenderCore/Camera/: CMakeLists.txt
RenderCore/Camera/private/: Camera.cpp
RenderCore/Camera/public/: Camera.hpp
RenderCore/ResourceManager/: CMakeLists.txt
RenderCore/Scene/: CMakeLists.txt
RenderCore/VulkanCore/: CMakeLists.txt
RenderCore/VulkanCore/private/: CommandPoolManager.cpp  Deivce.cpp  Descriptor.cpp  SwapChain.cpp  VKResource.cpp  VmaManager.cpp
RenderCore/VulkanCore/public/: CommandPoolManager.hpp  Descriptor.hpp  Device.hpp  Pipeline.hpp  ShaderManager.hpp  SwapChain.hpp  Utils.hpp  VKResource.hpp  VmaManager.hpp
UI/: CMakeLists.txt  MainWindow.cpp  VulkanContainer.cpp  VulkanWindow.hpp
docs/: ModelLoader使用示例.md  RenderGraph.md  RenderGraph同步优化说明.md  RenderGraph改进总结.md  Scene设计.md  规范.md
src/: CMakeLists.txt  main.cpp
src/Render/: CMakeLists.txt
src/Render/RenderCore/: CMakeLists.txt
src/Render/RenderCore/RenderGraph/: CMakeLists.txt
src/Render/RenderCore/RenderGraph/private/: RDGBuilder.cpp  RDGPass.cpp  RDGResource.hpp  RDGResourceAccessor.cpp  RDGSyncInfo.cpp  RenderGraph.cpp  RenderGraph.hpp
src/Render/RenderCore/RenderGraph/public/: RDG.hpp  RDGBuilder.hpp  RDGHandle.hpp  RDGPass.hpp  RDGResourceAccessor.hpp  RDGSyncInfo.hpp
src/Render/RenderCore/Resource/: CMakeLists.txt
src/Render/RenderCore/Resource/private/: ResourceManager.cpp  ResourceManagerUtils.cpp
src/Render/RenderCore/Resource/public/: ResourceManager.hpp  ResourceManagerUtils.hpp  ResourceType.hpp  resource.hpp
src/Render/RenderCore/Scene/: CMakeLists.txt
src/Render/RenderCore/Scene/private/: Camera.cpp  Light.cpp  Scene.cpp  SceneNode.cpp
src/Render/RenderCore/Scene/public/: Light.hpp  Scene.hpp  Transform.hpp  scenes.hpp
src/Render/RenderCore/VulkanCore/: CMakeLists.txt
src/Render/RenderCore/VulkanCore/private/: CommandPoolManager.cpp  Deivce.cpp  Pipeline.cpp  ShaderManager.cpp  VKResource.cpp
src/Render/RenderCore/VulkanCore/public/: Descriptor.hpp  Device.hpp  SwapChain.hpp  VKResource.hpp  vkcore.hpp
src/Render/Renderer/: CMakeLists.txt
src/Render/Renderer/public/: Renderer.hpp
src/RenderCore/: CMakeLists.txt
src/RenderCore/Camera/private/: Camera.cpp
src/RenderCore/Camera/public/: Camera.hpp
src/RenderCore/ResourceManager/private/: ResourceManager.cpp  ResourceManagerUtils.cpp
src/RenderCore/ResourceManager/public/: ResourceManager.hpp  ResourceManagerUtils.hpp  ResourceType.hpp
src/RenderCore/Scene/private/: Camera.cpp  Light.cpp  Scene.cpp
src/RenderCore/Scene/public/: Renderable.hpp  Scene.hpp  SceneNode.hpp
src/RenderCore/VulkanCore/private/: Deivce.cpp  SwapChain.cpp  VmaImplementation.cpp
src/UI/: CMakeLists.txt  MainWindow.hpp  VulkanContainer.hpp  VulkanWindow.cpp
